# thingy-world-firmware-aws

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.rst  apply_pdn_creds.py  check_kconfig_warnings.bash  light-bulb.conf  overlay-bsec.conf  package-lock.json  package.json  prj.conf  thingy_world.conf  west.yml
.github/workflows/: build-and-release.yaml  pr-check_compliance.yaml  synchronize-from-upstream.yaml
include/nrf9160dk_nrf9160_ns/: led_state_def.h
include/thingy91_nrf9160_ns/: led_state_def.h
mqtt-lightbulb/: CMakeLists.txt  Kconfig  README.rst  overlay-tls-nrf7002.conf  prj.conf
mqtt-lightbulb/boards/: native_posix.conf  nrf7002dk_nrf5340_cpuapp.conf  nrf9160dk_nrf9160_ns.conf  thingy91_nrf9160_ns.conf  thingy91_nrf9160_ns.overlay
mqtt-lightbulb/src/common/: message_channel.c  message_channel.h
mqtt-lightbulb/src/modules/led/: Kconfig.led  led.c
mqtt-lightbulb/src/modules/ledctrl/: CMakeLists.txt  Kconfig.ledctrl  ledctrl.c
mqtt-lightbulb/src/modules/network/: CMakeLists.txt  Kconfig.network  network_emulation.c  network_lte.c  network_wifi.c
mqtt-lightbulb/src/modules/sampler/: Kconfig.sampler  sampler.c
mqtt-lightbulb/src/modules/transport/: Kconfig.transport  transport.c
mqtt-lightbulb/src/modules/transport/client_id/: client_id.c  client_id.h
mqtt-lightbulb/src/modules/transport/credentials_provision/: credentials_provision.c
mqtt-lightbulb/src/modules/trigger/: Kconfig.trigger  trigger.c
src/: main.c
src/events/: led_state_event.h  ui_module_event.c  ui_module_event.h
src/modules/: cloud_module.c  (+3 more)
(+4 files in other folders)
